编写文档，demo和添加对DOM获取的支持

--- a/examples/todomvc/app/src/template/default/index.html
+++ b/examples/todomvc/app/src/template/default/index.html
@@ -1,11 +1,9 @@
-<div id="indexId" class="am-container">
+<div  class="am-container">
     <header class="header">
         <span class="title">@icepy Test Todo App</span>
     </header>
-    <div id="list" class="content">
-        <ul class="am-list">
+    <div id="defaultGo">
 
-        </ul>
     </div>
     <footer class="footer">
         <span class="title">@YYT PC Demo</span>
