--- a/examples/todomvc/app/style/less/index.main.less
+++ b/examples/todomvc/app/style/less/index.main.less
@@ -23,3 +23,13 @@
         padding-left: 10px;
     }
 }
+
+.default-margin{
+    margin-top:20px;
+    margin-bottom: 20px;
+}
+
+.go-back{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
